# TIGER_OT

./: .gitignore  CHECK_SETUP.sh  Makefile  README.md  UPDATE_SUMMARY.txt  WORKFLOW_GUIDE.md  WORKFLOW_STATUS.txt  config.sample.yaml  config.yaml  preflight_check.sh  requirements.txt  run_tiger.py  run_tiger_workflow.sh  run_with_tiger_env.sh  setup.sh  setup_environment.sh  sofia.txt  victor.txt
apps/: streamlit_tiger.py
configs/: default.yaml  rltr6.yaml  smoke-test.yaml
tiger_guides_pkg/: LICENSE  README.md  pyproject.toml
tiger_guides_pkg/docker/: Dockerfile  entrypoint.sh
tiger_guides_pkg/src/tiger_guides/: __init__.py  cli.py  config.py  constants.py  logging.py  slurm.py
tiger_guides_pkg/src/tiger_guides/data/defaults/: config.yaml
tiger_guides_pkg/src/tiger_guides/data/smoke/: config.yaml  expected_final_guides.csv  gencode.vM37.transcripts.uc.joined  targets.txt
tiger_guides_pkg/src/tiger_guides/download/: checksums.py  ensembl.py  models.py  references.py
tiger_guides_pkg/src/tiger_guides/filters/: ranking.py
tiger_guides_pkg/src/tiger_guides/models/: loader.py
tiger_guides_pkg/src/tiger_guides/offtarget/: search.py
tiger_guides_pkg/src/tiger_guides/resources/models/tiger_model/model/variables/: variables.data-00000-of-00001
tiger_guides_pkg/src/tiger_guides/tiger/: predictor.py  validator.py
tiger_guides_pkg/src/tiger_guides/workflow/: runner.py
tiger_guides_pkg/tests/: TEST_PLAN.md  conftest.py
tiger_guides_pkg/tests/integration/: test_cli_smoke.py
tiger_guides_pkg/tests/unit/: test_config.py  test_download.py  test_filters.py
(+84 files in other folders)
